@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.4 =
 -------------------------------------------------
+* Added filter "coursepress_unit_add_open_date" to allow display open unit date.
 
 = 2.0.3 =
 -------------------------------------------------
